deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soultoxik
  namespace: otus
  labels:
    app: soultoxik
spec:
  selector:
    matchLabels:
      app: soultoxik
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: soultoxik
    spec:
      containers:
      - name: echo
        image: soultoxik/otus-echo:v2
        imagePullPolicy: IfNotPresent

        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 3118

      - name: soultoxik
        image: soultoxik/otus:v5
        imagePullPolicy: IfNotPresent

        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3117
        readinessProbe:
          httpGet:
            path: /ready
            port: 3117
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 1

        livenessProbe:
          httpGet:
            path: /health
            port: 3117
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 1
