service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soultoxik
  namespace: otus
spec:
  type: ClusterIP
  selector:
    app: soultoxik
  ports:
  - port: 7337
    targetPort: 3117
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: otus
spec:
  type: ClusterIP
  selector:
    app: soultoxik
  ports:
  - port: 7338
    targetPort: 3118
